trunk/OldArchive/db9fb18b554b3dba2d90c1949971de2c-3725be9f9ce62f113fc473b4ae69c419/output
+ g++ -std=c++11 -O2 -Wall -pedantic main.cpp
main.cpp:5:11: warning: declaration ‘struct a::b’ does not declare anything [enabled by default]
 struct a::b;
           ^
main.cpp:6:1: error: declaration does not declare anything [-fpermissive]
 int;
 ^
